--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 body{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     height: 100vh;
     margin: 0;
     background-color: antiquewhite;
+}
+
+.heading{
+    margin-top: 20px;
+    font-size: 40px;
+    font-weight: bolder;
+    color: brown;
 }
 
 .calculator{
